--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Wordless</title>
@@ -81,36 +82,36 @@
 		</div>
 		<!-- keyboard adapted  from https://github.com/ocrebb776/wordle-recreate/blob/main/index.html -->
 		<div class="keyboard-table">
-			<button class="keyboard" id='q' onclick="window.type('q')">Q</button>
-			<button class="keyboard" id='w' onclick="window.type('w')">W</button>
-			<button class="keyboard" id='e' onclick="window.type('e')">E</button>
-			<button class="keyboard" id='r' onclick="window.type('r')">R</button>
-			<button class="keyboard" id='t' onclick="window.type('t')">T</button>
-			<button class="keyboard" id='y' onclick="window.type('y')">Y</button>
-			<button class="keyboard" id='u' onclick="window.type('u')">U</button>
-			<button class="keyboard" id='i' onclick="window.type('i')">I</button>
-			<button class="keyboard" id='o' onclick="window.type('o')">O</button>
-			<button class="keyboard" id='p' onclick="window.type('p')">P</button><BR>
+			<button id='q' onclick="window.type('q')">Q</button>
+			<button id='w' onclick="window.type('w')">W</button>
+			<button id='e' onclick="window.type('e')">E</button>
+			<button id='r' onclick="window.type('r')">R</button>
+			<button id='t' onclick="window.type('t')">T</button>
+			<button id='y' onclick="window.type('y')">Y</button>
+			<button id='u' onclick="window.type('u')">U</button>
+			<button id='i' onclick="window.type('i')">I</button>
+			<button id='o' onclick="window.type('o')">O</button>
+			<button id='p' onclick="window.type('p')">P</button><br>
 			
-			<button class="keyboard" id='a' onclick="window.type('a')">A</button>
-			<button class="keyboard" id='s' onclick="window.type('s')">S</button>
-			<button class="keyboard" id='d' onclick="window.type('d')">D</button>
-			<button class="keyboard" id='f' onclick="window.type('f')">F</button>
-			<button class="keyboard" id='g' onclick="window.type('g')">G</button>
-			<button class="keyboard" id='h' onclick="window.type('h')">H</button>
-			<button class="keyboard" id='j' onclick="window.type('j')">J</button>
-			<button class="keyboard" id='k' onclick="window.type('k')">K</button>
-			<button class="keyboard" id='l' onclick="window.type('l')">L</button><br>
+			<button id='a' onclick="window.type('a')">A</button>
+			<button id='s' onclick="window.type('s')">S</button>
+			<button id='d' onclick="window.type('d')">D</button>
+			<button id='f' onclick="window.type('f')">F</button>
+			<button id='g' onclick="window.type('g')">G</button>
+			<button id='h' onclick="window.type('h')">H</button>
+			<button id='j' onclick="window.type('j')">J</button>
+			<button id='k' onclick="window.type('k')">K</button>
+			<button id='l' onclick="window.type('l')">L</button><br>
 			
-			<button class="keyboard enter"  onclick="back()"id="back"><-</button>
-			<button class="keyboard" id='z' onclick="window.type('z')">Z</button>
-			<button class="keyboard" id='x' onclick="window.type('x')">X</button>
-			<button class="keyboard" id='c' onclick="window.type('c')">C</button>
-			<button class="keyboard" id='v' onclick="window.type('v')">V</button>
-			<button class="keyboard" id='b' onclick="window.type('b')">B</button>
-			<button class="keyboard" id='n' onclick="window.type('n')">N</button>
-			<button class="keyboard" id='m' onclick="window.type('m')">M</button>
-			<button class="keyboard enter"  onclick="enter(word)"><img src="enter.svg" width="20vw" ></button>
+			<button class="enter"  onclick="back()"id="back"><-</button>
+			<button id='z' onclick="window.type('z')">Z</button>
+			<button id='x' onclick="window.type('x')">X</button>
+			<button id='c' onclick="window.type('c')">C</button>
+			<button id='v' onclick="window.type('v')">V</button>
+			<button id='b' onclick="window.type('b')">B</button>
+			<button id='n' onclick="window.type('n')">N</button>
+			<button id='m' onclick="window.type('m')">M</button>
+			<button class="enter"  onclick="enter(word)"><img src="enter.svg" width="20vw" ></button>
 		</div>
 		<button class='new-game' onClick="newGame()">New Game</button>
 		<p id="prog" class="prog">
