--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Wordless</title>
-		<link href="wide.css" rel="stylesheet" type="text/css" id="style" />
+		<link href="style.css" rel="stylesheet" type="text/css" />
 		<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 	</head>
 	<body>
