Changed "rules" to "instructions"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="subheading">
 			<p><b>Type a 4-letter word, then hit enter to begin!</b></p>
 			<div class="info-dropdown">
-				<span class="rules"><b>Hover for rules</b></span>
+				<span class="rules"><b>Hover for instructions</b></span>
 				<div class="info-content">
 					<p>Guess the word in 8 attempts or less!<br><b>Type a 4-letter word, then hit enter to begin!</b><br><span class="green">Green</span> - Letter is part of target word and in correct position.<br><span class="yellow">Yellow</span> - Letter is part of target word, but in wrong position.<br><span class="red">Red</span> - Letter is not part of target word.</p>
 				</div>
