Added browser cache warning

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		</div>
 		<button class='new-game' onClick="newGame()">New Game</button>
 		<p id="prog" class="prog">
+			Note: Stats stored in browser cache!<br>
 			Games played: <span id="games"> </span> <br>
 			Total solves: <span id="total"> </span> <br>
 			Incomplete solves: <span id="not"> </span> <br>
