--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
 			Solves in 7 tries: <span id="7"> </span> <br>
 			Solves in 8 tries: <span id="8"> </span>
 		</p>
-		<script src="index.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
