--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- Inspiration taken from https://github.com/ocrebb776/wordle-recreate -->
+<!-- Some HTML formatting inspired by https://github.com/ocrebb776/wordle-recreate -->
 
 <html>
 	<head>
@@ -19,7 +19,7 @@
 			<div class="info-dropdown">
 				<span class="rules"><b>Hover for instructions</b></span>
 				<div class="info-content">
-					<p>Guess the word in 8 attempts or less!<br><b>Type a 4-letter word, then hit enter to begin!</b><br><span class="green">Green</span> - Letter is part of target word and in correct position.<br><span class="yellow">Yellow</span> - Letter is part of target word, but in wrong position.<br><span class="red">Red</span> - Letter is not part of target word.</p>
+					<p>Guess the English word in 8 attempts or less!<br><b>Type a 4-letter word, then hit enter to begin!</b><br><span class="green">Green</span> - Letter is part of target word and in correct position.<br><span class="yellow">Yellow</span> - Letter is part of target word, but in wrong position.<br><span class="red">Red</span> - Letter is not part of target word.</p>
 				</div>
 			</div>
 		</div>
@@ -81,40 +81,41 @@
 		<div class="output">
 			<p id="output"></p>
 		</div>
-		<!-- keyboard adapted  from https://github.com/ocrebb776/wordle-recreate/blob/main/index.html -->
+		
 		<div class="keyboard">
-			<button class="key" id='q' onclick="window.type('q')">Q</button>
-			<button class="key" id='w' onclick="window.type('w')">W</button>
-			<button class="key" id='e' onclick="window.type('e')">E</button>
-			<button class="key" id='r' onclick="window.type('r')">R</button>
-			<button class="key" id='t' onclick="window.type('t')">T</button>
-			<button class="key" id='y' onclick="window.type('y')">Y</button>
-			<button class="key" id='u' onclick="window.type('u')">U</button>
-			<button class="key" id='i' onclick="window.type('i')">I</button>
-			<button class="key" id='o' onclick="window.type('o')">O</button>
-			<button class="key" id='p' onclick="window.type('p')">P</button><BR>
+			<button class="key" id='q' onclick="window.game.screen.board.type('q')">Q</button>
+			<button class="key" id='w' onclick="window.game.screen.board.type('w')">W</button>
+			<button class="key" id='e' onclick="window.game.screen.board.type('e')">E</button>
+			<button class="key" id='r' onclick="window.game.screen.board.type('r')">R</button>
+			<button class="key" id='t' onclick="window.game.screen.board.type('t')">T</button>
+			<button class="key" id='y' onclick="window.game.screen.board.type('y')">Y</button>
+			<button class="key" id='u' onclick="window.game.screen.board.type('u')">U</button>
+			<button class="key" id='i' onclick="window.game.screen.board.type('i')">I</button>
+			<button class="key" id='o' onclick="window.game.screen.board.type('o')">O</button>
+			<button class="key" id='p' onclick="window.game.screen.board.type('p')">P</button><BR>
 			
-			<button class="key" id='a' onclick="window.type('a')">A</button>
-			<button class="key" id='s' onclick="window.type('s')">S</button>
-			<button class="key" id='d' onclick="window.type('d')">D</button>
-			<button class="key" id='f' onclick="window.type('f')">F</button>
-			<button class="key" id='g' onclick="window.type('g')">G</button>
-			<button class="key" id='h' onclick="window.type('h')">H</button>
-			<button class="key" id='j' onclick="window.type('j')">J</button>
-			<button class="key" id='k' onclick="window.type('k')">K</button>
-			<button class="key" id='l' onclick="window.type('l')">L</button><br>
+			<button class="key" id='a' onclick="window.game.screen.board.type('a')">A</button>
+			<button class="key" id='s' onclick="window.game.screen.board.type('s')">S</button>
+			<button class="key" id='d' onclick="window.game.screen.board.type('d')">D</button>
+			<button class="key" id='f' onclick="window.game.screen.board.type('f')">F</button>
+			<button class="key" id='g' onclick="window.game.screen.board.type('g')">G</button>
+			<button class="key" id='h' onclick="window.game.screen.board.type('h')">H</button>
+			<button class="key" id='j' onclick="window.game.screen.board.type('j')">J</button>
+			<button class="key" id='k' onclick="window.game.screen.board.type('k')">K</button>
+			<button class="key" id='l' onclick="window.game.screen.board.type('l')">L</button><br>
 			
-			<button class="key enter"  onclick="back()"id="back"><-</button>
-			<button class="key" id='z' onclick="window.type('z')">Z</button>
-			<button class="key" id='x' onclick="window.type('x')">X</button>
-			<button class="key" id='c' onclick="window.type('c')">C</button>
-			<button class="key" id='v' onclick="window.type('v')">V</button>
-			<button class="key" id='b' onclick="window.type('b')">B</button>
-			<button class="key" id='n' onclick="window.type('n')">N</button>
-			<button class="key" id='m' onclick="window.type('m')">M</button>
-			<button class="key enter"  onclick="enter(word)"><img src="enter.svg" width="20vw" ></button>
+			<button class="key enter"  onclick="window.game.backspace()"id="back"><-</button>
+			<button class="key" id='z' onclick="window.game.screen.board.type('z')">Z</button>
+			<button class="key" id='x' onclick="window.game.screen.board.type('x')">X</button>
+			<button class="key" id='c' onclick="window.game.screen.board.type('c')">C</button>
+			<button class="key" id='v' onclick="window.game.screen.board.type('v')">V</button>
+			<button class="key" id='b' onclick="window.game.screen.board.type('b')">B</button>
+			<button class="key" id='n' onclick="window.game.screen.board.type('n')">N</button>
+			<button class="key" id='m' onclick="window.game.screen.board.type('m')">M</button>
+			<!-- enter.svg from https://github.com/ocrebb776/wordle-recreate/blob/main/enter.svg -->
+			<button class="key enter"  onclick="window.game.enter()"><img src="enter.svg" width="20vw"></button>
 		</div>
-		<button class='new-game' onClick="newGame()">New Game</button>
+		<button class='new-game' onclick="window.removeEventListener('keydown', handleKeyDown, true); window.game.newGame();">New Game</button>
 		<p id="prog" class="prog">
 			Note: Stats stored in browser cache!<br>
 			Games played: <span id="games"> </span> <br>
@@ -129,7 +130,6 @@
 			Solves in 7 tries: <span id="7"> </span> <br>
 			Solves in 8 tries: <span id="8"> </span>
 		</p>
-		<script src="words.txt.js"></script>
 		<script src="index.js"></script>
 	</body>
 </html>
